# neural_fdm

./: .gitignore  README.md  installation_note.md  pyproject.toml  requirements.txt  setup.py
data/: autoencoder.eqx  decoder.eqx  decoder_freeze.eqx  losses_autoencoder.txt  losses_decoder.txt  piggy_decoder.eqx  srf_1.json  srf_3.json  srf_6.json
scripts/: bezier.yml  brickify.py  camera.py  colored_patches.py  config.yml  config_coupled.yml  config_sweep_coupled.yml  decoder_freeze_retrain.eqx  histogram.py  load_model.py  losses_autoencoder_freeze_retrain.txt  losses_decoder_freeze.txt  losses_decoder_freeze_retrain.txt  match_batch.py  match_shapes.py  optimize.py  plot_batch_histogram.py  plot_one_prediction.py  plot_predictions.py  predict.py  predict_optimize.py  shapes.py  sweep.py  sweep.yml  sweep_bezier.yml  sweep_coupled.py  sweep_tower.yml  text_2_mesh.py  tower.yml  train.py  train_coupled.py  train_coupled_freeze.py  view_tower_task.py  visualize.py  visualize_tower_task.py
scripts/wip/: config_sweep.yml  plot_batch_histogram.py  plot_one_prediction.py
src/neural_fdm/: __init__.py  builders.py  helpers.py  losses.py  mesh.py  models.py  plotting.py  serialization.py  training.py
src/neural_fdm/generators/: __init__.py  bezier.py  generator.py  generator_bezier.py  grids.py  tubes.py
src/neural_fofin/: __init__.py  bezier.py  builders.py  experiments.py  generator.py  generators.py  grids.py  helpers.py  losses.py  mesh.py  models.py  models2.py  plotting.py  serialization.py  training.py  training_coupled.py  visualization.py
(+5 files in other folders)
