[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neural_fdm"
version = "0.1.0"
description = "Combining differentiable mechanics simulations with neural networks"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Rafael Pastrana" }
]
dependencies = [
    "numpy<2",
    "scipy<1.13",
    "jax==0.4.23",
    "jaxlib==0.4.23",
    "equinox==0.11.3",
    "jax-fdm==0.8.6",
    "optax==0.1.5",
    "pyyaml==6.0.1",
    "tqdm==4.66.1",
    "fire==0.6.0",
    "matplotlib>=3.0"
]

[project.optional-dependencies]
dev = [
    "freetype-py",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "seaborn==0.13.2"
]

[tool.hatch.build.targets.wheel]
packages = ["src/neural_fdm"] 